# midogen

./: .gitignore  CMakeLists.txt  README.md
src/: Generator.cpp  Generator.h  Path.cpp  Path.h  String.cpp  String.h  midogen.cpp
test/: TestString.cpp  test.cpp
